...
          return Consumer<ThemeManager>(
            builder: (context, themeManager, child) {
              return MaterialApp(
                theme: themeManager.themeData,
                home: snapshot.data!,
                routes: {
                  '/settings': (_) => const SettingsScreen(),
                },
              );
            },
          );
        } else {
          return const MaterialApp(
...
