...
            const SizedBox(height: 20),
            ElevatedButton(
              onPressed: _logout,
              style: ElevatedButton.styleFrom(
                backgroundColor: Colors.redAccent,
              ),
              child: const Text('Wyloguj się',
                  style: TextStyle(color: Colors.white)),
            ),
            ListTile(
              title: Text("Obecnie zalogowany - ${user?.email}"),
            ),
          ],
...
