...
              : Form(
                  key: _formKey,
                  child: Column(
                    mainAxisSize: MainAxisSize.min,
                    children: <Widget>[
                      TextFormField(
                        key: const ValueKey('emailField'),
                        decoration: const InputDecoration(labelText: 'Email'),
                        validator: (input) =>
                            input!.contains('@') ? null : 'Błędny mail',
                        onSaved: (input) => _email = input!,
                      ),
                      TextFormField(
...
